<resources>
    <string name="app_name">helse</string>

    <!-- Onboarding -->
    <string name="onboarding_title">Første gang du bruker værhelse?</string>
    <string name="onboarding_description">Værhelse gir deg informasjon om hvordan været negativt kan påvirke din helse. Følg denne veiledningen for å lære mer eller tilpasse hva du ønsker å bli varslet om</string>
    <string name="skip">Hopp over</string>
    <string name="setup_preferences">Start veiledning</string>
    <string name="userlocation_switch">Bruk min posisjon for varsler</string>
    <string name="done">Ferdig</string>
    <string name="preferencesDescription">Valgte kategorier vil vises i ditt dashboard.\nDette kan alltids endres i ettertid.</string>
    <string name="logoDescription">Logo</string>

    <!-- Search and location -->
    <string name="location_text">%1$s, %2$s</string>
    <string name="location">%1$s</string>
    <string name="superlocation">%1$s</string>
    <string name="your_location">Din posisjon</string>
    <string name="your_superlocation">Forskningsparken, Oslo</string>

    <!--Time and date -->
    <string name="time_and_date">Currently showing: %s  </string>

    <!-- Bottom navigation -->
    <string name="nav_home">Hjem</string>
    <string name="nav_map">Kart</string>
    <string name="nav_settings">Innstillinger</string>

    <!-- Dashboard -->
    <string name="categories">Kategorier</string>
    <string name="categories_description">Trykk for mer informasjon og helsekonsekvenser</string>

    <!-- Cardmodule -->
    <string name="category_icon">Ikon</string>
    <string name="category_title">Kategori</string>
    <string name="dangerindicator">Risikonivå</string>
    <string name="push_notification_icon">Pushvarsler</string>

    <!-- Airquality -->
    <string name="concentration">%.0f μm</string>
    <string name="concentration_placeholder">44 µm</string>
    <string name="airquality_fragment_title">LUFTKVALITET</string>
    <string name="my_location_icon_desc">Min posisjon ikon</string>
    <string name="pm1_0">PM1.0</string>
    <string name="o3">O3</string>
    <string name="no2">NO2</string>
    <string name="pm2_5">PM2.5</string>

    <!-- UV -->
    <string name="clear">CLEAR</string>
    <string name="cloudy">CLOUDY</string>
    <string name="partlyCloudy">PARTLY CLOUDY</string>
    <string name="uviForecast">FORECAST</string>
    <string name="uv_fragment_title">UV-STRÅLING</string>

    <!-- Humidity -->
    <string name="humidity_fragment_title">LUFTFUKTIGHET</string>
    <string name="precentage_placeholder">0%</string>
    <string name="precentage">%.0f%%</string>
</resources>
