<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dashboard_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_dashboard"
    android:paddingTop="?attr/actionBarSize"
    tools:context=".ui.DashboardFragment">

...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Posisjon" />


    <LinearLayout
        android:id="@+id/dashboard_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_dashboard">

        <TextView
            android:id="@+id/dashboard_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/categories"
            android:textColor="@color/colorWhite"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/dashboard_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:fontFamily="sans-serif"
            android:text="@string/categories_description"
            android:textColor="@color/colorWhite"
...
