...
        android:text="@string/onboarding_description"
        android:textAlignment="center"
        android:textColor="#B2FFFFFF"
        android:textSize="14sp" />

    <Button
        android:id="@+id/setupBtn"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/colorWhite"
        android:letterSpacing="0"
...
